# docker-with-axum

./: .gitignore  .ignore  Readme.md  docker-compose.yaml
axum_project/: Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.client  Dockerfile.fullstack
axum_project/axum-project/: Cargo.toml
axum_project/axum-project/src/: database.rs  errors.rs  lib.rs  main.rs  middle.rs
axum_project/axum-project/src/entities/: mod.rs  refresh_token.rs  users.rs
axum_project/axum-project/src/router/api/: auth.rs  mod.rs  user.rs
axum_project/axum-project/src/router/hello/: database.rs  mod.rs  open_api.rs  state.rs
axum_project/axum-project/src/router/user/: mod.rs
axum_project/axum-project/src/utils/: errors.rs  hash.rs  jwt.rs  mod.rs
axum_project/axum-project/src/ws/: mod.rs
axum_project/backend/: Cargo.toml
axum_project/backend/src/: database.rs  main.rs  middle.rs
axum_project/backend/src/entities/: product.rs  users.rs
axum_project/backend/src/router/api/: auth.rs  mod.rs  user.rs
axum_project/backend/src/router/hello/: database.rs  mod.rs  open_api.rs
axum_project/backend/src/utils/: errors.rs  hash.rs  jwt.rs
axum_project/backend/src/ws/: chat.rs  mod.rs
axum_project/client/: Cargo.toml  Dioxus.toml
axum_project/client/src/: main.rs  util.rs
axum_project/client/src/component/: login.rs
axum_project/fullstack/: Cargo.toml  Dioxus.toml  expanded.rs
axum_project/fullstack/src/: database.rs  main.rs  middle.rs
axum_project/fullstack/src/front/: mod.rs  util.rs
axum_project/fullstack/src/front/page/: home.rs
axum_project/fullstack/src/front/page/component/: login.rs  mod.rs
axum_project/fullstack/src/resources/dto/: fullstack_extension.rs  mod.rs  user.rs
axum_project/fullstack/src/resources/entities/: category.rs  prelude.rs  users.rs
axum_project/fullstack/src/resources/style/: mod.rs
axum_project/fullstack/src/router/api/: auth.rs  mod.rs  user.rs
axum_project/fullstack/src/router/hello/: database.rs  mod.rs  open_api.rs
axum_project/fullstack/src/utils/: errors.rs  hash.rs  jwt.rs  mod.rs
axum_project/fullstack/src/ws/: chat.rs  mod.rs  state.rs
axum_project/fullstack/state-fullstack-context-macro/: Cargo.toml
axum_project/fullstack/state-fullstack-context-macro/src/: lib.rs
axum_project/shared/: Cargo.toml
axum_project/shared/res/: tacit-css-1.9.5.min.css
axum_project/shared/src/: lib.rs
axum_project/shared/src/dto/: user.rs
axum_project/ssr/: Cargo.toml  Dioxus.toml
axum_project/ssr/src/: main.rs
db/: Dockerfile
db/migration/src/: lib.rs  m20251228_110826_create_table.rs  m20260109_003305_update.rs  m20260119_020622_update.rs
env_files/: DB_ADMIN.env  DB_URL.env  DEV.env
