[package]
name = "axum-project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json", "multipart", "macros"] }
axum-extra = { version = "0.12.3", features = ["typed-header"] }
log = "0.4.29"
reqwest = { version = "0.12.28", features = ["json"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
