[package]
name = "axum-project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json", "multipart", "macros"] }
axum-extra = { version = "0.12.3", features = ["typed-header"] }
bcrypt = "0.17.1"
chrono = "0.4.42"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
log = "0.4.29"
mime = "0.3.17"
reqwest = { version = "0.12.28", features = ["json"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
