[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = {path = "../shared", features = ["server"]}
# 백엔드
# json, multipart: 요청/응답 데이터 형태 지원
# macros: 편리한 기능제공 (헤더 자료형 추출 등)
# ws: 웹소켓 지원
axum = { version = "0.8.8", features = ["json", "multipart", "macros", "ws"] }
axum-extra = { version = "0.12.3", features = ["typed-header"] }
# 해싱
bcrypt = "0.17.1"
# 날짜, 시간 관련
chrono = "0.4.42"
# std::future::* 를 좀 더 사용하기 편하게 해주는 유틸
futures-util = "0.3.31"
# jwt
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
# static 선언 쉽게 하기
lazy_static = "1.5.0"
# 각종 HTTP프로토콜 상수
mime = "0.3.17"
# 랜덤 지원
rand = "0.9.2"
# 프록시를 위한 통신
reqwest = { version = "0.12.28", features = ["json"] }
# 데이터베이스 ORM
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
# 직렬화, 역직렬화
serde = { version = "1.0.228", features = ["derive"] }
# 병렬처리 async await
tokio = { version = "1.48.0", features = ["full"] }
# 미들웨어
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
# 로깅
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# 오픈API설정
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
