[package]
name = "client"
version = "0.1.0"
authors = ["dolot <doolto10@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# shared = {path = "../shared"}
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
# 직렬화, 역직렬화
serde = { version = "1.0.228", features = ["derive"]}
# 프록시를 위한 통신
reqwest = { version = "0.12.28", features = ["json"], optional = true}
serde_json = "1.0.149"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dioxus/ssr", "dioxus/wasm-split", "dep:reqwest"]
