[package]
name = "fullstack"
version = "0.1.0"
edition = "2024"

[dependencies]
state-fullstack-context-macro = {path = "./state-fullstack-context-macro"}
# ---- 백엔드
# json, multipart: 요청/응답 데이터 형태 지원
# macros: 편리한 기능제공 (헤더 자료형 추출 등)
# ws: 웹소켓 지원
axum = { version = "0.8.8", features = ["json", "multipart", "macros", "ws"], optional = true}
axum-extra = { version = "0.12.3", features = ["typed-header"], optional = true}
# 미들웨어
tower = { version = "0.5.2", features = ["full"], optional = true}
tower-http = { version = "0.6.8", features = ["full"], optional = true}
# 오픈API설정
utoipa = { version = "5.4.0", features = ["axum_extras"], optional = true }
utoipa-axum = {version = "0.2.0", optional = true}
# utoipa-redoc = { version = "6.0.0", features = ["axum"], optional = true }
utoipa-scalar = { version = "0.3.0", features = ["axum"], optional = true }
manganis = "0.7.2"
# 병렬처리 async await
tokio = { version = "1.48.0", features = ["full"], optional = true }
# 데이터베이스 ORM
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"], optional = true}
# 서버용 로깅 구현체
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# 해싱
bcrypt = {version = "0.17.1", optional = true}
# jwt
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"], optional = true}
anyhow = {version = "1.0.100", optional = true}

# ---- 프론트엔드
# wasm 랜덤함수 지원
getrandom = { version = "0.3.4", features = ["wasm_js"] , optional = true}


# ---- 공통 크레이트
# 날짜, 시간 관련
chrono = "0.4.42"
# 프론트를 위해
dioxus = { version = "0.7.2", features = ["router","fullstack"] }
# std::future::* 를 좀 더 사용하기 편하게 해주는 유틸
futures-util = "0.3.31"
# static 선언 쉽게 하기
lazy_static = "1.5.0"
# 각종 HTTP프로토콜 상수
mime = "0.3.17"
# 랜덤 지원
rand = {version = "0.9.2"}
# 프록시를 위한 통신
reqwest = { version = "0.12.28", features = ["json"] }
# 직렬화, 역직렬화
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# 로깅
tracing = "0.1.44"

[features]
default = ["web"]
web = ["dioxus/web", "dep:getrandom"]
server = ["dioxus/server", "dep:tokio","dep:utoipa", "dep:utoipa-axum", "dep:utoipa-scalar", "dep:utoipa", "dep:axum", "dep:axum-extra", "dep:tower", "dep:tower-http", "dep:sea-orm", "dep:bcrypt", "dep:jsonwebtoken", "dep:anyhow"]
