[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
utoipa = { version = "5.4.0", optional = true }
manganis = {version = "0.7.2"}
sea-orm = {version = "1.1.19", optional = true}

[features]
default = []
server = ["dep:utoipa", "dep:sea-orm"]
